manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "rootbot"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "rootbot"
  template:
    metadata:
      labels:
        app: "rootbot"
    spec:
      containers:
        - name: "rootbot"
          image: "heroes.azurecr.io/heroescluster"
          ports:
          - containerPort: 3978
