manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "rootbot"
    labels:
        app: "rootbot"
spec:
    type: LoadBalancer
    ports:
    - port: 443
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "rootbot"
