manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heroes-bot-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
      - bot.balderdash-heroes.com
    secretName: heroes-bot-encrypt-secret
  rules:
  - host: bot.balderdash-heroes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rootbot
            port: 
                number: 3978
